# AdventOfCode

./: Cargo.toml
.github/workflows/: 2015.yml  2016.yml
2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  file_reader.py  include_all.py  requirements.txt
2016/: Cargo.toml
2016/src/utils/: aoc_file.rs  assembunny.rs
2024/: go.mod  go.sum
2024/aoc/: aoc.go
2024/day01/: main.go  main_test.go
2024/day02/: main.go  main_test.go
2024/day03/: main.go  main_test.go
2024/day04/: main.go  main_test.go
2024/day05/: main.go  main_test.go
2024/day06/: main.go  main_test.go
2024/day07/: main.go  main_test.go
2024/day08/: main.go
2024/day09/: main.go  main_test.go
2024/day10/: main.go  main_test.go
2024/day11/: main.go
2024/day12/: main.go  main_test.go
2024/day13/: main.go  main_test.go
2024/day14/: main.go  main_test.go
2024/day15/: main.go  main_test.go
2024/day16/: main.go  main_test.go
2024/day17/: main.go  main_test.go
2024/day18/: main.go  main_test.go
2024/day19/: main.go  main_test.go
2024/day20/: main.go  main_test.go
2024/day21/: main.go  main_test.go
2024/day22/: main.go  main_test.go
2024/day23/: main.go  main_test.go
2024/day24/: main.go
2024/day25/: main.go  main_test.go
2024/functional/: functional.go
2024/geometry/: aoc_geometry.go  geom_test.go
src/: main.rs  utils.rs
src/utils/: aoc_file.rs  assembunny.rs
