[package]
name = "aoc_2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rayon = "1.8.0"
text_io = "0.1.12"
almost = "0.2"
md5 = "0.7.*"
regex = "1.*"
once_cell = "1.8.0"
fancy-regex = "0.13.0"
num-integer = "0.1.*"
